--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,29 +2,32 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-	version="4.0" metadata-complete="false">
-	<!-- @WebServlet을 사용할 때는metadata-complete="false",아닐떄는 true -->
+	version="4.0" metadata-complete="true">
 
-<!--
-<servlet>
-		<servlet-name>helloWorld</servlet-name>
-		<servlet-class>org.jinseon.examples.HelloWorldServlet</servlet-class>
-	</servlet>
+	<listener>
+		<listener-class>org.jinseon.web.common.ContextListener</listener-class>
+	</listener>
+
+	<context-param>
+		<param-name>basePackage</param-name>
+		<param-value>org.jinseon.book.chap11</param-value>
+	</context-param>
 
 	<servlet>
-		<servlet-name>hello</servlet-name>
-		<servlet-class>org.jinseon.examples.HelloServlet</servlet-class>
-</servlet>
-
-<servlet-mapping>
-		<servlet-name>helloWorld</servlet-name>
-		<url-pattern>/helloWorld</url-pattern>
-	</servlet-mapping>
+		<servlet-name>simpleDispatcher</servlet-name>
+		<servlet-class>org.jinseon.web.common.SimpleDispatcherServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>hello</servlet-name>
-		<url-pattern>/hello</url-pattern>
-</servlet-mapping>
+		<servlet-name>simpleDispatcher</servlet-name>
+		<url-pattern>/app/*</url-pattern>
+	</servlet-mapping>
 
--->
+	<error-page>
+		<location>/e/error.jsp</location>
+	</error-page>
+
+	<welcome-file-list>
+		<welcome-file>app/main</welcome-file>
+	</welcome-file-list>
 </web-app>
